SyntacticAnalyzer/tests/fail/ifelse03.java
class foo {
	ctor(int n1)
	var int n2;
	{
		if (j!=2)
			;
		else { 
			// llamada mal formada test2(.
			(prueba.test1().test2(.test3().test4()); 
		}
	}
}
